--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,18 @@
             <version>5.8.10</version>
         </dependency>
 
+<!--        邮箱-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.1</version>
+        </dependency>
 
     </dependencies>
 
